@@ -110,6 +110,7 @@ class Packetery extends CarrierModule
         }
         Configuration::updateValue('PACKETERY_LABEL_FORMAT', 'A7 on A4');
         Configuration::updateValue('PACKETERY_ORDERS_PER_PAGE', 50);
+        Configuration::updateValue('PACKETERY_ADDRESS_VALIDATION', 'none');
 
         // backup possible old order table
         $orderTableCheck = $db->executeS('SHOW TABLES LIKE "' . _DB_PREFIX_ . 'packetery_order"');
@@ -166,6 +167,7 @@ class Packetery extends CarrierModule
             !Configuration::deleteByName('PACKETERY_ESHOP_ID') ||
             !Configuration::deleteByName('PACKETERY_LABEL_FORMAT') ||
             !Configuration::deleteByName('PACKETERY_ORDERS_PER_PAGE') ||
+            !Configuration::deleteByName('PACKETERY_ADDRESS_VALIDATION') ||
             !Configuration::deleteByName('PACKETERY_LAST_BRANCHES_UPDATE')
         ) {
             return false;
@@ -257,6 +259,8 @@ class Packetery extends CarrierModule
             'PACKETERY_APIPASS',
             'PACKETERY_ESHOP_ID',
             'PACKETERY_LABEL_FORMAT',
+            'PACKETERY_ORDERS_PER_PAGE',
+            'PACKETERY_ADDRESS_VALIDATION',
             'PACKETERY_LAST_BRANCHES_UPDATE',
         ]);
 
@@ -426,6 +430,13 @@ class Packetery extends CarrierModule
             ];
             $this->context->smarty->assign('messages', $messages);
         }
+
+        $addressValidationOptions = [
+            'none' => $this->l('Do not use address validation'),
+            'optional' => $this->l('Optional address validation'),
+            'required' => $this->l('Require address validation'),
+        ];
+        $this->context->smarty->assign('addressValidationOptions', $addressValidationOptions);
 
         $output = $this->context->smarty->fetch($this->local_path.'views/templates/admin/configure.tpl');
         $output .= $this->context->smarty->fetch($this->local_path.'views/templates/admin/prestui/ps-tags.tpl');
