@@ -1,4 +1,5 @@
 2.1.14 - Added: support for Packeta address validation widget in the cart
+       - Added: Address validation setting with 'none', 'optional' and 'required' options
 2.1.14 - Fixed: treated a rare situation where the payment module cannot be instantiated
        - Fixed: functionality of Packeta widget button in KnowBand SuperCheckout when no shipping method is preselected
        - Fixed: deprecated hook backOfficeHeader replaced by displayBackOfficeHeader
